fix year cutoff on some browsers

--- a/src/base-components/DatePicker.css
+++ b/src/base-components/DatePicker.css
@@ -23,6 +23,10 @@
     -moz-appearance: none;
 }
 
+.date-picker > .select select.year {
+    width: 5em;
+}
+
 .date-picker > .select select::-ms-expand {
     display: none;
 }
